migrate element pipe rendering + lot of block related code